[package]
name = "bedwars"
edition.workspace = true
version.workspace = true
publish = false
readme = "README.md"

[features]
reflect = [
    "dep:bevy_reflect",
    "bevy_app/reflect_auto_register",
    "bevy_ecs/reflect_auto_register",
    "bevy_reflect/auto_register_inventory",
    "hyperion/reflect",
    "hyperion-clap/reflect",
    "hyperion-gui/reflect",
    "hyperion-inventory/reflect",
    "hyperion-item/reflect",
    "hyperion-permission/reflect",
    "hyperion-proxy-module/reflect",
    "hyperion-utils/reflect",
]
# This incurs about a 0.2-0.3ms cost on my system - should more crates have this feature?
debug = ["hyperion/ecs_debug"]

[dependencies]
hyperion.workspace = true
hyperion-clap.workspace = true
hyperion-genmap.workspace = true
hyperion-gui.workspace = true
hyperion-inventory.workspace = true
hyperion-item.workspace = true
hyperion-permission.workspace = true
hyperion-proxy-module.workspace = true
hyperion-utils.workspace = true

valence_bytes.workspace = true
valence_ident.workspace = true
valence_protocol.workspace = true
valence_server.workspace = true
valence_text.workspace = true

bevy_app.workspace = true
bevy_ecs.workspace = true
# this is definitely only a dependency that would be used by projects built on top of hyperion
bevy_reflect = { workspace = true, optional = true }
bevy_remote = { version = '0.18', default-features = false, features = [
    'http',
] }
bevy_tasks.workspace = true

anyhow.workspace = true
clap.workspace = true
dotenvy.workspace = true
envy.workspace = true
fastrand.workspace = true
geometry.workspace = true
glam.workspace = true
rayon.workspace = true
roaring.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-tracy.workspace = true
uuid.workspace = true

[dev-dependencies]
tracing = { workspace = true, features = ["release_max_level_info"] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
tikv-jemallocator.workspace = true

[lints]
workspace = true
