[package]
name = "bedwars"
edition.workspace = true
version.workspace = true
publish = false
readme = "README.md"

[features]
reflect = ["dep:bevy_reflect", "hyperion/reflect"]
# This incurs about a 0.2-0.3ms cost on my system - should more crates have this feature?
debug = ["hyperion/ecs_debug"]

[dependencies]
hyperion = { path = "../../crates/hyperion" }
hyperion-permission = { path = "../../crates/hyperion-permission" } #TODO: Adjust the macro, like bevy_ecs, to support using it through hyperion directly

bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_reflect = { workspace = true, optional = true }
# this is definitely only a dependency that would be used by projects built on top of hyperion
bevy_remote = { version = '0.18', default-features = false, features = [
    'http',
] }
bevy_tasks.workspace = true
anyhow.workspace = true
clap.workspace = true
dotenvy.workspace = true
envy.workspace = true
fastrand.workspace = true
geometry.workspace = true
glam.workspace = true
rayon.workspace = true
roaring.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-tracy.workspace = true

[dev-dependencies]
tracing = { workspace = true, features = ["release_max_level_info"] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
tikv-jemallocator.workspace = true

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["hyperion-permission"] # see macro issue above
