[package]
name = "antithesis-bot"
version.workspace = true
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
edition.workspace = true

[dependencies]
antithesis_sdk.workspace = true
bytes.workspace = true
dotenvy.workspace = true
envy.workspace = true
eyre.workspace = true
regex.workspace = true
serde.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
valence_protocol.workspace = true

[lints]
workspace = true
