[package]
name = "antithesis-bot"
edition.workspace = true
version.workspace = true
publish = false

[dependencies]
antithesis_sdk.workspace = true
bytes.workspace = true
dotenvy.workspace = true
envy.workspace = true
eyre.workspace = true
regex.workspace = true
serde.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
valence_protocol.workspace = true

[lints]
workspace = true
