[package]
name = "packet-inspector"
description = "A simple Minecraft proxy for inspecting packets."
version.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
valence_protocol = { git = 'https://github.com/TestingPlant/valence', branch = 'feat-open', features = [
    "compression",
] }
anyhow.workspace = true
bytes.workspace = true
flate2.workspace = true
flume.workspace = true
tokio.workspace = true
tracing.workspace = true
time.workspace = true
egui.workspace = true
eframe.workspace = true
egui_dock.workspace = true
itertools.workspace = true
syntect.workspace = true
serde.workspace = true

[build-dependencies]
anyhow.workspace = true
syn.workspace = true
valence_build_utils = { git = 'https://github.com/TestingPlant/valence', branch = 'feat-open' }
quote.workspace = true
serde_json.workspace = true
proc-macro2.workspace = true
serde.workspace = true
