[package]
name = "packet-inspector"
description = "A simple Minecraft proxy for inspecting packets."
edition.workspace = true
version.workspace = true
publish = false
readme = "README.md"

[dependencies]
valence_protocol = { git = 'https://github.com/TestingPlant/valence', branch = 'feat-open', features = [
    "compression",
] }

anyhow.workspace = true
bytes.workspace = true
eframe.workspace = true
egui.workspace = true
egui_dock.workspace = true
flate2.workspace = true
flume.workspace = true
serde.workspace = true
syntect.workspace = true
tokio.workspace = true
tracing.workspace = true
time.workspace = true
itertools.workspace = true

[build-dependencies]
valence_build_utils = { git = 'https://github.com/TestingPlant/valence', branch = 'feat-open' }

anyhow.workspace = true
proc-macro2.workspace = true
quote.workspace = true
serde.workspace = true
serde_json.workspace = true
syn.workspace = true

[lints]
workspace = true
