[package]
name = "rust-mc-bot"
edition.workspace = true
version.workspace = true
publish = false
readme = "README.md"

[dependencies]
anyhow.workspace = true
dotenvy.workspace = true
envy.workspace = true
libdeflater.workspace = true
mio.workspace = true
num_cpus.workspace = true
rand.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
